Feign implemented, made settings