@@ -5,18 +5,20 @@ import com.couriertracking.ordermodel.response.OrderResponse;
 import com.couriertracking.orderservice.persistance.entity.CourierEntity;
 import com.couriertracking.orderservice.persistance.entity.CustomerEntity;
 import com.couriertracking.orderservice.persistance.entity.OrderEntity;
+import com.couriertracking.orderservice.persistance.entity.StoreEntity;
 import lombok.AccessLevel;
 import lombok.NoArgsConstructor;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @NoArgsConstructor(access = AccessLevel.PRIVATE)
 public class OrderConverter {
-
-    public static OrderEntity toOrderEntity(CustomerEntity customer, CourierEntity courier) {
+    public static OrderEntity toOrderEntity(CustomerEntity customer, CourierEntity courier, StoreEntity store) {
         OrderEntity entity = new OrderEntity();
         entity.setCustomer(customer);
         entity.setCourier(courier);
+        entity.setStore(store);
         return entity;
     }
 
@@ -25,6 +27,7 @@ public class OrderConverter {
                 .id(entity.getId())
                 .customerId(entity.getCustomer().getId())
                 .courierId(entity.getCourier().getId())
+                .storeId(entity.getStore().getId())
                 .createdDate(entity.getCreatedDate())
                 .lastModifiedDate(entity.getLastModifiedDate())
                 .build();
@@ -33,6 +36,6 @@ public class OrderConverter {
     public static List<OrderResponse> toOrderResponseList(List<OrderEntity> entities) {
         return entities.stream()
                 .map(OrderConverter::toOrderResponse)
-                .toList();
+                .collect(Collectors.toList());
     }
 }
